[gd_scene load_steps=13 format=3 uid="uid://b7utj0gr3fvrx"]

[ext_resource type="Script" path="res://ui/main_menu/main_menu.gd" id="2_tqalf"]
[ext_resource type="PackedScene" uid="uid://b0c3m2fxsdveo" path="res://ui/main_menu/options_menu/master_options_menu_with_tabs.tscn" id="3_uuuu4"]
[ext_resource type="Script" path="res://addons/maaacks_game_template/base/scripts/ui_sound_controller.gd" id="4_kigtq"]
[ext_resource type="PackedScene" uid="uid://b7hs5igqv1qjk" path="res://ui/credits/credits.tscn" id="4_ujp5j"]
[ext_resource type="Script" path="res://addons/maaacks_game_template/base/scenes/menus/main_menu/config_version_label.gd" id="6_hwiir"]
[ext_resource type="Texture2D" uid="uid://57crc7maanq3" path="res://ui/main_menu/assets/anzeigetafel.png" id="7_hrxfd"]
[ext_resource type="Script" path="res://addons/maaacks_game_template/base/scenes/menus/main_menu/config_name_label.gd" id="7_i3lvj"]
[ext_resource type="Texture2D" uid="uid://dm5rbly3yn7hr" path="res://ui/main_menu/assets/fading.png" id="8_8d80v"]
[ext_resource type="Script" path="res://addons/maaacks_game_template/base/scripts/capture_focus.gd" id="8_d2jpe"]
[ext_resource type="FontFile" uid="uid://cijb4lkv1fvbh" path="res://assets/fonts/nippo/WEB/fonts/Nippo-Regular.ttf" id="8_mcq1t"]
[ext_resource type="StyleBox" uid="uid://01yk2v131qmi" path="res://ui/assets/color_eraser.tres" id="9_l3bui"]

[sub_resource type="LabelSettings" id="LabelSettings_rdr3a"]
font = ExtResource("8_mcq1t")
font_size = 96
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 4)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_tqalf")
game_scene_path = "res://ui/game_ui.tscn"
options_packed_scene = ExtResource("3_uuuu4")
credits_packed_scene = ExtResource("4_ujp5j")

[node name="UISoundController" type="Node" parent="."]
script = ExtResource("4_kigtq")

[node name="BackgroundTextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="OptionsContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="CreditsContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 32

[node name="FlowControlContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="FlowControl" type="Control" parent="FlowControlContainer"]
layout_mode = 2
mouse_filter = 2

[node name="BackButton" type="Button" parent="FlowControlContainer/FlowControl"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(62, 40)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 62.0
grow_vertical = 0
text = "Back"

[node name="MenuContainer" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MenuContainer"]
layout_mode = 0
offset_right = 1915.0
offset_bottom = 1069.0
texture = ExtResource("8_8d80v")

[node name="HBoxContainer" type="HBoxContainer" parent="MenuContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MenuContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 96
theme_override_constants/margin_top = 77

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MenuContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
text = "U8 Berlin"
label_settings = SubResource("LabelSettings_rdr3a")
vertical_alignment = 1
script = ExtResource("7_i3lvj")

[node name="MenuButtonContainer" type="MarginContainer" parent="MenuContainer/HBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/margin_left = 4

[node name="MenuButtonsBoxContainer" type="BoxContainer" parent="MenuContainer/HBoxContainer/MarginContainer/VBoxContainer/MenuButtonContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 2
alignment = 1
vertical = true
script = ExtResource("8_d2jpe")

[node name="NewGameButton" type="Button" parent="MenuContainer/HBoxContainer/MarginContainer/VBoxContainer/MenuButtonContainer/MenuButtonsBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("8_mcq1t")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("9_l3bui")
text = "Neues Spiel"
alignment = 0

[node name="HSeparator" type="HSeparator" parent="MenuContainer/HBoxContainer/MarginContainer/VBoxContainer/MenuButtonContainer/MenuButtonsBoxContainer"]
layout_mode = 2

[node name="ContinueGameButton" type="Button" parent="MenuContainer/HBoxContainer/MarginContainer/VBoxContainer/MenuButtonContainer/MenuButtonsBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("8_mcq1t")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("9_l3bui")
text = "Spiel fortsetzen"
alignment = 0

[node name="HSeparator2" type="HSeparator" parent="MenuContainer/HBoxContainer/MarginContainer/VBoxContainer/MenuButtonContainer/MenuButtonsBoxContainer"]
layout_mode = 2

[node name="OptionsButton" type="Button" parent="MenuContainer/HBoxContainer/MarginContainer/VBoxContainer/MenuButtonContainer/MenuButtonsBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("8_mcq1t")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("9_l3bui")
text = "Optionen"
alignment = 0

[node name="HSeparator3" type="HSeparator" parent="MenuContainer/HBoxContainer/MarginContainer/VBoxContainer/MenuButtonContainer/MenuButtonsBoxContainer"]
layout_mode = 2

[node name="CreditsButton" type="Button" parent="MenuContainer/HBoxContainer/MarginContainer/VBoxContainer/MenuButtonContainer/MenuButtonsBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("8_mcq1t")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("9_l3bui")
text = "Credits"
alignment = 0

[node name="HSeparator4" type="HSeparator" parent="MenuContainer/HBoxContainer/MarginContainer/VBoxContainer/MenuButtonContainer/MenuButtonsBoxContainer"]
layout_mode = 2

[node name="ExitButton" type="Button" parent="MenuContainer/HBoxContainer/MarginContainer/VBoxContainer/MenuButtonContainer/MenuButtonsBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 40)
layout_mode = 2
theme_override_fonts/font = ExtResource("8_mcq1t")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = ExtResource("9_l3bui")
text = "Beenden"
alignment = 0

[node name="VersionMargin" type="MarginContainer" parent="MenuContainer/HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/margin_bottom = 34

[node name="VersionLabel" type="Label" parent="MenuContainer/HBoxContainer/MarginContainer/VBoxContainer/VersionMargin"]
layout_mode = 2
size_flags_vertical = 10
text = "Version: 0.2.0"
script = ExtResource("6_hwiir")
version_prefix = "Version: "

[node name="MarginContainer2" type="MarginContainer" parent="MenuContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 76

[node name="Control" type="HBoxContainer" parent="MenuContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 8
alignment = 1

[node name="TextureRect2" type="TextureRect" parent="MenuContainer/HBoxContainer/MarginContainer2/Control"]
layout_mode = 2
texture = ExtResource("7_hrxfd")
stretch_mode = 4

[node name="MarginContainer" type="MarginContainer" parent="MenuContainer"]
layout_mode = 0
offset_left = 977.0
offset_top = 294.0
offset_right = 1547.0
offset_bottom = 334.0

[node name="SubTitleLabel" type="Label" parent="MenuContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Der realistischste Berliner U-Bahn Simulator"
vertical_alignment = 1

[connection signal="pressed" from="FlowControlContainer/FlowControl/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MenuContainer/HBoxContainer/MarginContainer/VBoxContainer/MenuButtonContainer/MenuButtonsBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MenuContainer/HBoxContainer/MarginContainer/VBoxContainer/MenuButtonContainer/MenuButtonsBoxContainer/ContinueGameButton" to="." method="_on_continue_game_button_pressed"]
[connection signal="pressed" from="MenuContainer/HBoxContainer/MarginContainer/VBoxContainer/MenuButtonContainer/MenuButtonsBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MenuContainer/HBoxContainer/MarginContainer/VBoxContainer/MenuButtonContainer/MenuButtonsBoxContainer/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="MenuContainer/HBoxContainer/MarginContainer/VBoxContainer/MenuButtonContainer/MenuButtonsBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
